--- a/public/templates/recipes.html
+++ b/public/templates/recipes.html
@@ -40,7 +40,7 @@
       <p>
         <!-- √ TODO Add binding expressions here in order to
           display information about the recipe. -->
-          {{recipe.name}}
+          {{recipe.name}}<br><small>{{recipe.description}}</small>
       </p>
     </div>
   </a>
