Updated delete confirmation message

--- a/public/templates/recipe-delete.html
+++ b/public/templates/recipe-delete.html
@@ -3,7 +3,7 @@
 
 <div class="grid-100 row">
   <div class="grid-70">
-    <p>{{recipe.name}}<br><small>{{recipe.description}}</small></p>
+    <p>Delete {{recipe.name}} recipe?<br><small>{{recipe.description}}</small></p>
   </div>
   <div class="flush-right confirm">
     <button ng-click="deleteRecipe(recipeId)">Delete</button>
